lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:3: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
return Segment(getSol(3),getSol(5))
                     ^